objects/CMPL123CME__EU_MIR__c.object
<CustomObject>
    <description>European Manufacturer Incident Report</description>
    <fields>
        <fullName>BMX_Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Cancel_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancel Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EU_MIR1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Cancel_Done_On__c</fullName>
        <label>Cancel Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Report_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Close Report Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EU_MIR2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Report_Done_On_Date__c</fullName>
        <label>xxClose Report Done On (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Local_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Assessment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Questionnaire__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Local Assessment</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Questionnaire__c</referenceTo>
        <relationshipLabel>EU MIR</relationshipLabel>
        <relationshipName>EU_MIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Local_Subsidiary_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Subsidiary Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EU_MIR3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Local_Subsidiary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Subsidiary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EU_MIR4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Local_Subsidiary_Text__c</fullName>
        <label>Local Subsidiary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Reportable_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reportable Country</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>COUNTRY CODE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>EU MIR</relationshipLabel>
        <relationshipName>EU_MIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Rework_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rework Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EU_MIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Rework_Done_On__c</fullName>
        <label>Rework Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_Report_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submit Report Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EU_MIR6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_Report_Done_On__c</fullName>
        <label>Submit Report Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_for_Review_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submit for Review Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EU_MIR5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_for_Review_Done_On_Date__c</fullName>
        <label>xxSubmit for Review Done On (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Time_to_Notify_the_CA__c</fullName>
        <formula>IF( ISBLANK(BMX_Approved_Date__c), '',
TEXT(DATEVALUE(BMX_Approved_Date__c) - CMPL123CME__Complaint__r.BMX_Customer_Contact_Date__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Notify the CA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__A_Medical_Device_Problem_Code_Choice_1__c</fullName>
        <label>A-Medical Device Problem Code-Choice 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__A_Medical_Device_Problem_Code_Choice_2__c</fullName>
        <label>A-Medical Device Problem Code-Choice 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__A_Medical_Device_Problem_Code_Choice_3__c</fullName>
        <label>A-Medical Device Problem Code-Choice 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Author_Address_Complement__c</fullName>
        <description>The address where the Authorised representative is located. E.g. building name</description>
        <inlineHelpText>The address where the Authorised representative is located. E.g. building name</inlineHelpText>
        <label>Address complement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Author_City_Name__c</fullName>
        <description>The name of the city where the Authorised representative is located.</description>
        <inlineHelpText>The name of the city where the Authorised representative is located.</inlineHelpText>
        <label>City name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Author_Contact_First_Name__c</fullName>
        <description>First name of the Authorised representative  contact person.</description>
        <inlineHelpText>First name of the Authorised representative  contact person.</inlineHelpText>
        <label>Contact first name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Author_Contact_Last_Name__c</fullName>
        <description>Last name of the Authorised representative  contact person</description>
        <inlineHelpText>Last name of the Authorised representative  contact person.</inlineHelpText>
        <label>Contact last name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Author_Country__c</fullName>
        <description>The country where the Authorised representative is located.</description>
        <inlineHelpText>The country where the Authorised representative is located.</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>Iceland</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Latvia</fullName>
                </value>
                <value>
                    <fullName>Liechtenstein</fullName>
                </value>
                <value>
                    <fullName>Lithuania</fullName>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                </value>
                <value>
                    <fullName>Malta</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Romania</fullName>
                </value>
                <value>
                    <fullName>Slovakia</fullName>
                </value>
                <value>
                    <fullName>Slovenia</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Author_E_mail__c</fullName>
        <description>E-mail of the Authorised representative contact person.</description>
        <inlineHelpText>E-mail of the Authorised representative contact person.</inlineHelpText>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Author_P_O_Box__c</fullName>
        <description>The P.O box of the Authorised representative.</description>
        <inlineHelpText>The P.O box of the Authorised representative.</inlineHelpText>
        <label>P.O Box</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Author_Phone__c</fullName>
        <description>Telephone number of the Authorised representative contact person</description>
        <inlineHelpText>Telephone number of the Authorised representative contact person</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Author_Postcode__c</fullName>
        <description>The postal or zip code where the Authorised representative is located.</description>
        <inlineHelpText>The postal or zip code where the Authorised representative is located.</inlineHelpText>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Author_Single_Registration_Number_SRN__c</fullName>
        <description>SRN is the unique identifier which will be the unique identifier of actors in the future Eudamed. When an SRN is available, an SRN field will be completed and will pre-populate the Authorised representative details, including the Authorised representative's name.</description>
        <inlineHelpText>SRN is unique identifier which will be unique identifier of actors in future Eudamed. When an SRN is available, an SRN field will be completed and will pre-populate the Authorised representative details, including Authorised representative's name.</inlineHelpText>
        <label>Single Registration Number (SRN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Author_Street_Number__c</fullName>
        <description>The street number of the manufacturer Autorised representative.</description>
        <inlineHelpText>The street number of the manufacturer Autorised representative.</inlineHelpText>
        <label>Street number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Author_Street__c</fullName>
        <description>The street of the Authorised representative.</description>
        <inlineHelpText>The street of the Authorised representative.</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__B_Investigation_Type_Code_Choice_1__c</fullName>
        <label>B-Investigation Type Code-Choice 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__B_Investigation_Type_Code_Choice_2__c</fullName>
        <label>B-Investigation Type Code-Choice 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__B_Investigation_Type_Code_Choice_3__c</fullName>
        <label>B-Investigation Type Code-Choice 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Basic_UDI_DI__c</fullName>
        <description>The Basic UDI-DI is the main key in the database and relevant documentation (e.g. certificates, declaration of conformity, technical documentation and summary of safety and clinical performance) to connect devices with same intended purpose, risk class and essential design and manufacturing characteristics.
It is independent/separate from the packaging/labelling of the device and it does not appear on any trade item.
Any Basic UDI-DI shall identify the devices (group) covered by that Basic UDI-DI in a unique manner.</description>
        <inlineHelpText>The Basic UDI-DI is the main key in the database and relevant documentation to connect devices with same intended purpose, risk class and essential design and manufacturing characteristics.</inlineHelpText>
        <label>Basic UDI-DI/Eudamed-DI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Basis_Of_Identifying_Similar_Events__c</fullName>
        <description>How have you defined and categorised similar incidents? Specify the particular products, batches, serial number range etc that you believe is the most appropriate for categorisation of relevant similar incidents.</description>
        <inlineHelpText>How have you defined and categorised similar incidents? Specify the particular products, batches, serial number range etc that you believe is the most appropriate for categorisation of relevant similar incidents.</inlineHelpText>
        <label>Basis of identifying similar events</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Model</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Lot/Batch</fullName>
                </value>
                <value>
                    <fullName>Product platform</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Body_Weight_Of_Patient__c</fullName>
        <description>The patient's weight in kilograms.</description>
        <inlineHelpText>The patient's weight in kilograms.</inlineHelpText>
        <label>Body Weight (kg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C_Investigation_Findings_Code_Choice_1__c</fullName>
        <label>C-Investigation Findings Code-Choice 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C_Investigation_Findings_Code_Choice_2__c</fullName>
        <label>C-Investigation Findings Code-Choice 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C_Investigation_Findings_Code_Choice_3__c</fullName>
        <label>C-Investigation Findings Code-Choice 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Catalogue_Reference_Number__c</fullName>
        <description>The value given by the Regulated Entity to identify the specific medical device as it relates to its form/fit, function and process (i.e., manufacturing processes requiring differentiation for distribution control (e.g., sterilization, component material, reprocessing, etc.) (IMDRF).</description>
        <inlineHelpText>The value given by the Regulated Entity to identify the specific medical device as it relates to its form/fit, function and process. (IMDRF).</inlineHelpText>
        <label>Catalogue/Reference number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Classification_Of_Incident__c</fullName>
        <description>Please classify the incident according with the following definitions:
Serious public health threat:
An event which could result in imminent risk of death, serious deterioration in a person's state of health, or serious illness, that may require prompt remedial action, and that may cause significant morbidity or mortality in humans, or that is unusual or unexpected for the given place and time
Death:
The event led to the death of a patient, user or other person.
Unanticipated serious deterioration in state of health:
An unanticipated serious deterioration in state of health is one where the event was not considered in a risk analysis, and where it led to a serious deterioration in the state of health of a patient, user or other person.
All other reportable incidents:
These are events which did not involve a death and which were not unanticipated but which led, or might have led, to a serious deterioration in the state of health of a patient, user or other person.</description>
        <inlineHelpText>Please classify the incident accordingly:
Serious public health threat
Death
Unanticipated serious deterioration in state of health
All other reportable incidents.</inlineHelpText>
        <label>Classification of incident</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Serious public health threat</fullName>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Unanticipated serious deterioration in state of health</fullName>
                </value>
                <value>
                    <fullName>All other reportable incidents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Complaint.</description>
        <inlineHelpText>Related Complaint.</inlineHelpText>
        <label>Complaint</label>
        <referenceTo>CMPL123CME__Complaint__c</referenceTo>
        <relationshipLabel>EU MIR</relationshipLabel>
        <relationshipName>EU_MIR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Countries_List__c</fullName>
        <description>Countries list.</description>
        <label>Countries list</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>CMPL123CME__Region_Market_Distribution__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CY</fullName>
                </value>
                <value>
                    <fullName>CZ</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>EE</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>IS</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>LI</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>LU</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Current_Device_Location_Other__c</fullName>
        <description>The current location of the device involved in this event- please describe the location if none of the provided options are applicable.</description>
        <inlineHelpText>The current location of the device involved in this event- please describe the location if none of the provided options are applicable.</inlineHelpText>
        <label>Current Device Location Other</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Current_Device_Location__c</fullName>
        <description>The current location of the device involved in this event- please describe the location if none of the provided options are applicable.</description>
        <inlineHelpText>The current location of the device involved in this event- please describe the location if none of the provided options are applicable.</inlineHelpText>
        <label>Current Device Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Healthcare facility/carer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Patient/user</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
                <value>
                    <fullName>In transit to manufacturer</fullName>
                </value>
                <value>
                    <fullName>Remains implanted</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__D_Investigation_Conclusion_Choice_1__c</fullName>
        <label>D-Investigation Conclusion-Choice 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D_Investigation_Conclusion_Choice_2__c</fullName>
        <label>D-Investigation Conclusion-Choice 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__D_Investigation_Conclusion_Choice_3__c</fullName>
        <label>D-Investigation Conclusion-Choice 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_Of_Incident_From__c</fullName>
        <description>Date when incident happened - if incident date is unknown please add the dates between when you think the incident occurred. If this incident is a result of a literature report please enter a date range similar to the range of the report. In case the specific date is known you only have to enter it once into the first field. The same date is automatically enetered into the seconde field. In case of a time-span you need to adjust the second field accordingly.</description>
        <inlineHelpText>Date when incident happened. If this incident is a result of literature report, please enter a date range similar to the range of the report.In case of a time-span, adjust the From and To date field accordingly.</inlineHelpText>
        <label>Date of incident from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_Of_Incident_To__c</fullName>
        <description>Date when incident happened - if incident date is unknown please add the dates between when you think the incident occurred. If this incident is a result of a literature report please enter a date range similar to the range of the report. 
In case the specific date is known you only have to enter it once into the first field. The same date is automatically entered into the second field. In case of a time-span you need to adjust the second field accordingly.</description>
        <inlineHelpText>Date when incident happened. If this incident is a result of literature report, please enter a date range similar to the range of the report. In case of a time-span, adjust the From and To date field accordingly.</inlineHelpText>
        <label>Date of incident to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_Of_Submission__c</fullName>
        <description>Date when you submit the report.</description>
        <inlineHelpText>Date when you submit the report.</inlineHelpText>
        <label>Date of submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_When_Device_Was_Explanted_From__c</fullName>
        <description>Start date of device explantation.</description>
        <inlineHelpText>Date when device was explanted (from).</inlineHelpText>
        <label>Device Explantation Date - From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_When_Device_Was_Explanted_To__c</fullName>
        <description>End date of device explantation.</description>
        <inlineHelpText>Date when device was explanted (to).</inlineHelpText>
        <label>Device Explantation Date - To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_When_Device_Was_Implanted_From__c</fullName>
        <description>Start date of device implantation.</description>
        <inlineHelpText>Date when device was implanted (from).</inlineHelpText>
        <label>Device Implantation Date - From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_When_Device_Was_Implanted_To__c</fullName>
        <description>End date of device implantation.</description>
        <inlineHelpText>Date when device was implanted (to).</inlineHelpText>
        <label>Device Implantation Date - To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Days_At_Time_Of_Incident__c</fullName>
        <description>The age of the patient in Years or Months and Days. Months and days should only be used for patients under the age of 1. For all others please use years only.</description>
        <inlineHelpText>The age of the patient in years or months or days. Months &amp; days should only be used for patients under the age of 1. For all others please use years and months.</inlineHelpText>
        <label>Days</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Description_Of_Device_Nomenclature_Text__c</fullName>
        <description>Nomenclature text: can be the same as the text defining the code in 2.2b

Description of the device and its intended use: Please describe the intended use of the device as foreseen in the IFU.</description>
        <inlineHelpText>Nomenclature text: can be the same as the text defining the code in 2.2b.

Description of the device and its intended use: Please describe the intended use of the device as foreseen in the IFU.</inlineHelpText>
        <label>Description of device/Nomenclature text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Description_Of_Remedial_Action__c</fullName>
        <description>Describe any remedial, corrective and / or preventative action(s) taken as a result of this event and / or your investigation.</description>
        <inlineHelpText>Describe any Remedial and/or Corrective and/or Preventative action(s) taken as a result of this event and/or your investigation.</inlineHelpText>
        <label>Description of remedial action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Details_Of_The_Selection_Made_Above__c</fullName>
        <description>Provide the details for the above choice.</description>
        <inlineHelpText>Provide the details for the above choice.</inlineHelpText>
        <label>Details of the selection made</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Expiry_Date__c</fullName>
        <description>The expiry date for the medical device to which this report refers.</description>
        <inlineHelpText>The expiry date for the medical device to which this report refers.</inlineHelpText>
        <label>Device expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Has_Been_Placed_On_Market_Before__c</fullName>
        <description>Select if the device was placed on the market before the implementation of the MDD (93/42/EEC)/AIMDD (90/385/EEC)/IVDD (98/79/EC) OR MDR (Regulation (EU) 2017/745)/IVDR (Regulation (EU) 2017/746).</description>
        <inlineHelpText>Select if the device was placed on the market before the implementation of the MDD (93/42/EEC)/AIMDD (90/385/EEC)/IVDD (98/79/EC) OR MDR (Regulation (EU) 2017/745)/IVDR (Regulation (EU) 2017/746).</inlineHelpText>
        <label>Device has been placed on market before</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>This device has been placed on the market before the implementation of the MDD/AIMDD/IVDD OR MDR/IVDR</fullName>
                    <label>This device has been placed on the market before the implementation of the MDD/AIMDD/IVDD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Manufacturing_Date__c</fullName>
        <description>The date of manufacture for the medical device to which this report refers.</description>
        <inlineHelpText>The date of manufacture for the medical device to which this report refers.</inlineHelpText>
        <label>Device manufacturing date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Operator_At_Event_Other__c</fullName>
        <description>Indicate who was operating the device at the time of the event: healthcare professional, patient, other: please describe the operator if none of the provided options are applicable.</description>
        <inlineHelpText>Indicate who was operating the device at the time of the event: healthcare professional, patient, other: please describe the operator if none of the provided options are applicable.</inlineHelpText>
        <label>Device Operator At Event Other</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>